Version 1.5.2+svn:
 * Language and i18n:
   * updated translations: Chinese (Traditional), Finnish, Galician, German,
     Latvian, Polish, Slovak
 * Multiplayer:
   * removed the "Great War" MP era
 * Python AI
   * Added ai_init.py and ai_launcher.py to make it easier to customize
     AI environment and startup. Both are used by the new embedded python
     implementation.
   * reversed builtin is now allowed. This allows for random.shuffle to be
     called.
 * Terrains:
   * Made user-made content graphic rules be parsed before core ones, so
     custom tiles look the same in-game as they do in the editor.
 * User interface:
   * Fixed a broken translation which gave all females the prefix female^ on
     alignment description when using the "C" locale or any translation that
     is missing that string.
   * Make the load and recruit hotkey use the ctrl instead of cmd key on non
     Mac systems
 * WML engine:
   * It is now possible to use [time_area] to add or remove new local ToD
     areas and their schedules during scenario events. Removal requires to
     associate an id. to [time_area]s, or it won't work.
 * Miscellaneous and bug fixes:
   * Add some gcc-4.3.0 compilation fixes (patch #1083)


Version 1.5.2:
 * campaigns:
   * Son of the Black Eye
     * new set of portrait art
     * in 'Black Flag', there's now several galleons transporting enemies to the
       beach, and no watch towers
     * in 'Saving Inarix', you can now more precisely control when you destroy
       the bridge
     * many assorted small tweaks to most scenarios
     * when leading the Great Horde, all units now require 1 less upkeep
   * Tutorial
     * Fixed players side name to same as leaders name (bug: #10114)
 * formula AI:
   * added variant_iterator to iterate over variant elements
   * modified choose, filter, find and map functions to use variant_iterator,
     so they work correctly with a variant_map type