@@ -226,6 +226,9 @@
     ellipsis_image="misc/icon-ellipsis.png"
 
     {core/team-colors.cfg}
+
+    default_victory_music="victory.ogg,victory2.ogg"
+    default_defeat_music="defeat.ogg,defeat2.ogg"
 [/game_config]
 
 [textdomain]
