@@ -4,6 +4,14 @@ Version 1.5.2+svn:
      Latvian, Polish, Slovak
  * Multiplayer:
    * removed the "Great War" MP era
+ * Music and sound effects:
+   * Engine automatically plays special music on defeat or victory; default
+     lists from which an option is randomly chosen at runtime are provided as
+     the default_victory_music and default_defeat_music attributes in
+     [game_config] node; this may be overriden per-scenario using the
+     victory_music and/or defeat_music attributes on its code - it can also
+     be overriden in a [endlevel] block by providing a music= attribute with
+     the desired list (feature request #11203).
  * Python AI
    * Added ai_init.py and ai_launcher.py to make it easier to customize
      AI environment and startup. Both are used by the new embedded python
